# Libranatic

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
schema/: database.py
schema/migrations/: env.py
src/: index.py  logger.py  settings.py
src/config/: settings.py
src/libintegration/: models.py
src/libintegration/documentation/: document_docs.py  users_doc.py
src/libintegration/domain/abstraction/: third_party_abstract.py
src/libintegration/domain/apps/document_parsing/groq/: document_app.py  groq_client.py
src/libintegration/domain/apps/third_party_integration_app/: adapter.py  base.py  third_party_integration.py
src/libintegration/domain/controllers/: document.py  third_party_integration.py
src/libintegration/domain/enums/: providers.py
src/libintegration/domain/factory/: DocumentFactory.py  third_party_factory.py
src/libintegration/domain/models/: document_model.py  error_model.py  users_model.py
src/libintegration/domain/routers/: __init__.py  document.py  root.py  users.py
src/libintegration/domain/utils/: utils.py
src/libintegration/libcommon/: async_http_client.py  http_client.py
src/libintegration/middlewares/: header_middleware.py
src/schema/: database.py  tables.py
src/schema/migrations/: env.py
src/schema/migrations/versions/: 1e0f03676fa4_create_document_tables.py  28d685df6d44_create_document_tables.py  66aaddcd5de0_change_vector_dimension_to_1024.py  cf077235cd65_intial_migrations.py
tests/: __init__.py  config.py
tests/test_views/: test_user.py
